clang-ir/tests/snapshots/snapshot_fixtures__fixtures_cfg__pointer_width_targets.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.cfg/pointer_width_targets.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn pointer_width_code() -> s32i [internal, c, no_inline, dso_local, nothrow] {
    %9 = alloca s32i, "__retval", align 4
    %10 = const 64 : s32i
    store %10, %9
    %11 = load %9 : s32i
    return %11
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @printf : ((s8i*, ...) -> s32i)*
    %3 = get_global @.str : s8i[4]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = call @pointer_width_code() : s32i [all]
    %6 = call @printf(%4, %5) : s32i [all]
    %7 = const 0 : s32i
    store %7, %0
    %8 = load %0 : s32i
    return %8
}
