clang-ir/tests/snapshots/snapshot_fixtures__fixtures_cfg__slate_msvc_target.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.cfg/slate_msvc_target.c" (c, x86_64-unknown-linux-gnu)
fn target_code() -> s32i [internal, c, no_inline, dso_local, nothrow] {
        %4 = alloca s32i, "__retval", align 4
        %5 = const 0 : s32i
        store %5, %4
        %6 = load %4 : s32i
        return %6
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = call @target_code() : s32i [all]
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
