clang-ir/tests/snapshots/snapshot_fixtures__fixtures_cfg__unix_target.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.cfg/unix_target.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn unix_code() -> s32i [internal, c, no_inline, dso_local, nothrow] {
        %9 = alloca s32i, "__retval", align 4
        %10 = const 1 : s32i
        store %10, %9
        %11 = load %9 : s32i
        return %11
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = get_global @printf : (s8i*, ...) -> s32i*
        %3 = get_global @.str : s8i[4]*
        %4 = cast(array_to_ptrdecay) %3 : s8i*
        %5 = call @unix_code() : s32i [all]
        %6 = call @printf(%4, %5) : s32i [all]
        %7 = const 0 : s32i
        store %7, %0
        %8 = load %0 : s32i
        return %8
}
